Added initial AccordionPane component render implementation, things currently missing:  - handling of enabled/disabled state  - immediate server notification  - partial update / lazy rendering  - Pane component detection should be improved

--- a/src/webcontainer/java/META-INF/nextapp/echo/SynchronizePeerBindings.properties
+++ b/src/webcontainer/java/META-INF/nextapp/echo/SynchronizePeerBindings.properties
@@ -1,6 +1,9 @@
 # Echo3 Extras Component Synchronize Peers
 nextapp.echo.extras.app.MenuBarPane							nextapp.echo.extras.webcontainer.sync.component.MenuBarPanePeer
+nextapp.echo.extras.app.AccordionPane						nextapp.echo.extras.webcontainer.sync.component.AccordionPanePeer
 
 # Echo3 Extras Property Component Synchronize Peers (From Application Framework)
 nextapp.echo.extras.app.menu.ItemModel          			nextapp.echo.extras.app.serial.property.ItemModelPeer
 nextapp.echo.extras.app.menu.MenuStateModel     			nextapp.echo.extras.app.serial.property.MenuStateModelPeer
+
+nextapp.echo.extras.app.layout.AccordionPaneLayoutData		nextapp.echo.extras.app.serial.property.AccordionPaneLayoutDataPeer
