--- a/src/webcontainer/java/META-INF/nextapp/echo/SynchronizePeerBindings.properties
+++ b/src/webcontainer/java/META-INF/nextapp/echo/SynchronizePeerBindings.properties
@@ -1,6 +1,7 @@
 # Echo3 Extras Component Synchronize Peers
-nextapp.echo.extras.app.MenuBarPane							nextapp.echo.extras.webcontainer.sync.component.MenuBarPanePeer
 nextapp.echo.extras.app.AccordionPane						nextapp.echo.extras.webcontainer.sync.component.AccordionPanePeer
+nextapp.echo.extras.app.DropDownMenu						nextapp.echo.extras.webcontainer.sync.component.DropDownMenuPeer
+nextapp.echo.extras.app.MenuBarPane							nextapp.echo.extras.webcontainer.sync.component.MenuBarPanePeer
 
 # Echo3 Extras Property Component Synchronize Peers (From Application Framework)
 nextapp.echo.extras.app.menu.ItemModel          			nextapp.echo.extras.app.serial.property.ItemModelPeer
