--- a/src/webcontainer/java/META-INF/nextapp/echo/SynchronizePeerBindings.properties
+++ b/src/webcontainer/java/META-INF/nextapp/echo/SynchronizePeerBindings.properties
@@ -2,9 +2,11 @@
 nextapp.echo.extras.app.AccordionPane						nextapp.echo.extras.webcontainer.sync.component.AccordionPanePeer
 nextapp.echo.extras.app.DropDownMenu						nextapp.echo.extras.webcontainer.sync.component.DropDownMenuPeer
 nextapp.echo.extras.app.MenuBarPane							nextapp.echo.extras.webcontainer.sync.component.MenuBarPanePeer
+nextapp.echo.extras.app.TabPane								nextapp.echo.extras.webcontainer.sync.component.TabPanePeer
 
 # Echo3 Extras Property Component Synchronize Peers (From Application Framework)
 nextapp.echo.extras.app.menu.ItemModel          			nextapp.echo.extras.app.serial.property.ItemModelPeer
 nextapp.echo.extras.app.menu.MenuStateModel     			nextapp.echo.extras.app.serial.property.MenuStateModelPeer
 
 nextapp.echo.extras.app.layout.AccordionPaneLayoutData		nextapp.echo.extras.app.serial.property.AccordionPaneLayoutDataPeer
+nextapp.echo.extras.app.layout.TabPaneLayoutData			nextapp.echo.extras.app.serial.property.TabPaneLayoutDataPeer
