--- a/src/webcontainer/java/META-INF/nextapp/echo/SynchronizePeerBindings.properties
+++ b/src/webcontainer/java/META-INF/nextapp/echo/SynchronizePeerBindings.properties
@@ -1,5 +1,6 @@
 # Echo3 Extras Component Synchronize Peers
 nextapp.echo.extras.app.AccordionPane						nextapp.echo.extras.webcontainer.sync.component.AccordionPanePeer
+nextapp.echo.extras.app.BorderPane              			nextapp.echo.extras.webcontainer.sync.component.BorderPanePeer
 nextapp.echo.extras.app.DropDownMenu						nextapp.echo.extras.webcontainer.sync.component.DropDownMenuPeer
 nextapp.echo.extras.app.MenuBarPane							nextapp.echo.extras.webcontainer.sync.component.MenuBarPanePeer
 nextapp.echo.extras.app.TabPane								nextapp.echo.extras.webcontainer.sync.component.TabPanePeer
