--- a/src/webcontainer/java/META-INF/nextapp/echo/SynchronizePeerBindings.properties
+++ b/src/webcontainer/java/META-INF/nextapp/echo/SynchronizePeerBindings.properties
@@ -2,6 +2,7 @@
 nextapp.echo.extras.app.AccordionPane						nextapp.echo.extras.webcontainer.sync.component.AccordionPanePeer
 nextapp.echo.extras.app.BorderPane              			nextapp.echo.extras.webcontainer.sync.component.BorderPanePeer
 nextapp.echo.extras.app.DropDownMenu						nextapp.echo.extras.webcontainer.sync.component.DropDownMenuPeer
+nextapp.echo.extras.app.Group								nextapp.echo.extras.webcontainer.sync.component.GroupPeer
 nextapp.echo.extras.app.MenuBarPane							nextapp.echo.extras.webcontainer.sync.component.MenuBarPanePeer
 nextapp.echo.extras.app.TabPane								nextapp.echo.extras.webcontainer.sync.component.TabPanePeer
 
