- Added Messagedialog.  (overdue for commit) - Created workable means of rendering menustatemodel to client.

--- a/src/webcontainer/java/META-INF/nextapp/echo/SynchronizePeerBindings.properties
+++ b/src/webcontainer/java/META-INF/nextapp/echo/SynchronizePeerBindings.properties
@@ -8,7 +8,8 @@ nextapp.echo.extras.app.TabPane								nextapp.echo.extras.webcontainer.sync.com
 
 # Echo3 Extras Property Component Synchronize Peers (From Application Framework)
 nextapp.echo.extras.app.menu.ItemModel          			nextapp.echo.extras.app.serial.property.ItemModelPeer
-nextapp.echo.extras.app.menu.MenuStateModel     			nextapp.echo.extras.app.serial.property.MenuStateModelPeer
+nextapp.echo.extras.webcontainer.sync.component.AbstractMenuPeer$RenderedMenuStateModel \
+        nextapp.echo.extras.webcontainer.sync.component.AbstractMenuPeer$RenderedMenuStateModelPropertyPeer
 
 nextapp.echo.extras.app.layout.AccordionPaneLayoutData		nextapp.echo.extras.app.serial.property.AccordionPaneLayoutDataPeer
 nextapp.echo.extras.app.layout.TabPaneLayoutData			nextapp.echo.extras.app.serial.property.TabPaneLayoutDataPeer
