Added ToolTipContainer component as a replacement for the one in echo2contrib.

--- a/src/webcontainer/java/META-INF/nextapp/echo/SynchronizePeerBindings.properties
+++ b/src/webcontainer/java/META-INF/nextapp/echo/SynchronizePeerBindings.properties
@@ -5,6 +5,7 @@ nextapp.echo.extras.app.DropDownMenu						nextapp.echo.extras.webcontainer.sync.
 nextapp.echo.extras.app.Group								nextapp.echo.extras.webcontainer.sync.component.GroupPeer
 nextapp.echo.extras.app.MenuBarPane							nextapp.echo.extras.webcontainer.sync.component.MenuBarPanePeer
 nextapp.echo.extras.app.TabPane								nextapp.echo.extras.webcontainer.sync.component.TabPanePeer
+nextapp.echo.extras.app.ToolTipContainer					nextapp.echo.extras.webcontainer.sync.component.ToolTipContainerPeer
 
 # Echo3 Extras Property Component Synchronize Peers (From Application Framework)
 nextapp.echo.extras.app.menu.ItemModel          			nextapp.echo.extras.app.serial.property.ItemModelPeer
