initial tree checkin

--- a/src/webcontainer/java/META-INF/nextapp/echo/SynchronizePeerBindings.properties
+++ b/src/webcontainer/java/META-INF/nextapp/echo/SynchronizePeerBindings.properties
@@ -7,6 +7,7 @@ nextapp.echo.extras.app.Group								nextapp.echo.extras.webcontainer.sync.compo
 nextapp.echo.extras.app.MenuBarPane							nextapp.echo.extras.webcontainer.sync.component.MenuBarPanePeer
 nextapp.echo.extras.app.TabPane								nextapp.echo.extras.webcontainer.sync.component.TabPanePeer
 nextapp.echo.extras.app.ToolTipContainer					nextapp.echo.extras.webcontainer.sync.component.ToolTipContainerPeer
+nextapp.echo.extras.app.Tree                                nextapp.echo.extras.webcontainer.sync.component.TreePeer
 
 # Echo3 Extras Property Component Synchronize Peers (From Application Framework)
 nextapp.echo.extras.app.menu.ItemModel          			nextapp.echo.extras.app.serial.property.ItemModelPeer
@@ -15,3 +16,5 @@ nextapp.echo.extras.webcontainer.sync.component.AbstractMenuPeer$RenderedMenuSta
 
 nextapp.echo.extras.app.layout.AccordionPaneLayoutData		nextapp.echo.extras.app.serial.property.AccordionPaneLayoutDataPeer
 nextapp.echo.extras.app.layout.TabPaneLayoutData			nextapp.echo.extras.app.serial.property.TabPaneLayoutDataPeer
+nextapp.echo.extras.webcontainer.sync.component.TreePeer$TreeStructure \
+                                             nextapp.echo.extras.webcontainer.sync.component.TreePeer$TreeStructurePeer
