changed client-to-server expansion notification mechanism implemented selection lots of jsdoc

--- a/src/webcontainer/java/META-INF/nextapp/echo/SynchronizePeerBindings.properties
+++ b/src/webcontainer/java/META-INF/nextapp/echo/SynchronizePeerBindings.properties
@@ -18,3 +18,5 @@ nextapp.echo.extras.app.layout.AccordionPaneLayoutData		nextapp.echo.extras.app.
 nextapp.echo.extras.app.layout.TabPaneLayoutData			nextapp.echo.extras.app.serial.property.TabPaneLayoutDataPeer
 nextapp.echo.extras.webcontainer.sync.component.TreePeer$TreeStructure \
                                              nextapp.echo.extras.webcontainer.sync.component.TreePeer$TreeStructurePeer
+nextapp.echo.extras.webcontainer.sync.component.TreePeer$TreeSelectionUpdate \
+                                             nextapp.echo.extras.webcontainer.sync.component.TreePeer$TreeSelectionUpdatePeer
