Added stub for RichTextArea (no work implemented at this point).

--- a/src/webcontainer/java/META-INF/nextapp/echo/SynchronizePeerBindings.properties
+++ b/src/webcontainer/java/META-INF/nextapp/echo/SynchronizePeerBindings.properties
@@ -5,6 +5,7 @@ nextapp.echo.extras.app.ContextMenu							nextapp.echo.extras.webcontainer.sync.
 nextapp.echo.extras.app.DropDownMenu						nextapp.echo.extras.webcontainer.sync.component.DropDownMenuPeer
 nextapp.echo.extras.app.Group								nextapp.echo.extras.webcontainer.sync.component.GroupPeer
 nextapp.echo.extras.app.MenuBarPane							nextapp.echo.extras.webcontainer.sync.component.MenuBarPanePeer
+nextapp.echo.extras.app.RichTextArea						nextapp.echo.extras.webcontainer.sync.component.RichTextAreaPeer
 nextapp.echo.extras.app.TabPane								nextapp.echo.extras.webcontainer.sync.component.TabPanePeer
 nextapp.echo.extras.app.ToolTipContainer					nextapp.echo.extras.webcontainer.sync.component.ToolTipContainerPeer
 nextapp.echo.extras.app.Tree                                nextapp.echo.extras.webcontainer.sync.component.TreePeer
