(Slight) progress on ColorSelect.

--- a/src/webcontainer/java/META-INF/nextapp/echo/SynchronizePeerBindings.properties
+++ b/src/webcontainer/java/META-INF/nextapp/echo/SynchronizePeerBindings.properties
@@ -1,6 +1,7 @@
 # Echo3 Extras Component Synchronize Peers
 nextapp.echo.extras.app.AccordionPane						nextapp.echo.extras.webcontainer.sync.component.AccordionPanePeer
 nextapp.echo.extras.app.BorderPane              			nextapp.echo.extras.webcontainer.sync.component.BorderPanePeer
+nextapp.echo.extras.app.ColorSelect              			nextapp.echo.extras.webcontainer.sync.component.ColorSelectPeer
 nextapp.echo.extras.app.ContextMenu							nextapp.echo.extras.webcontainer.sync.component.ContextMenuPeer
 nextapp.echo.extras.app.DropDownMenu						nextapp.echo.extras.webcontainer.sync.component.DropDownMenuPeer
 nextapp.echo.extras.app.Group								nextapp.echo.extras.webcontainer.sync.component.GroupPeer
