Initial commit of RTA icons (currently only available custom configured via test app).

--- a/src/app/java/META-INF/nextapp/echo/XmlPeers.properties
+++ b/src/app/java/META-INF/nextapp/echo/XmlPeers.properties
@@ -1,2 +1,3 @@
+nextapp.echo.extras.app.IconSet		                        nextapp.echo.extras.app.serial.property.IconSetPeer
 nextapp.echo.extras.app.layout.AccordionPaneLayoutData     	nextapp.echo.extras.app.serial.property.AccordionPaneLayoutDataPeer
 nextapp.echo.extras.app.layout.TabPaneLayoutData			nextapp.echo.extras.app.serial.property.TabPaneLayoutDataPeer
