--- a/src/webcontainer/java/META-INF/nextapp/echo/SynchronizePeerBindings.properties
+++ b/src/webcontainer/java/META-INF/nextapp/echo/SynchronizePeerBindings.properties
@@ -12,6 +12,7 @@ nextapp.echo.extras.app.ToolTipContainer					nextapp.echo.extras.webcontainer.sy
 nextapp.echo.extras.app.Tree                                nextapp.echo.extras.webcontainer.sync.component.TreePeer
 
 # Echo3 Extras Property Component Synchronize Peers (From Application Framework)
+nextapp.echo.extras.app.IconSet		                        nextapp.echo.extras.app.serial.property.IconSetPeer
 nextapp.echo.extras.app.menu.ItemModel          			nextapp.echo.extras.app.serial.property.ItemModelPeer
 nextapp.echo.extras.webcontainer.sync.component.AbstractMenuPeer$RenderedMenuStateModel \
         nextapp.echo.extras.webcontainer.sync.component.AbstractMenuPeer$RenderedMenuStateModelPropertyPeer
