More progress on 2->3 TransitionPane port (still not even kinda working nor intended to be).

--- a/src/webcontainer/java/META-INF/nextapp/echo/SynchronizePeerBindings.properties
+++ b/src/webcontainer/java/META-INF/nextapp/echo/SynchronizePeerBindings.properties
@@ -9,6 +9,7 @@ nextapp.echo.extras.app.MenuBarPane							nextapp.echo.extras.webcontainer.sync.
 nextapp.echo.extras.app.RichTextArea						nextapp.echo.extras.webcontainer.sync.component.RichTextAreaPeer
 nextapp.echo.extras.app.TabPane								nextapp.echo.extras.webcontainer.sync.component.TabPanePeer
 nextapp.echo.extras.app.ToolTipContainer					nextapp.echo.extras.webcontainer.sync.component.ToolTipContainerPeer
+nextapp.echo.extras.app.TransitionPane                      nextapp.echo.extras.webcontainer.sync.component.TransitionPanePeer
 nextapp.echo.extras.app.Tree                                nextapp.echo.extras.webcontainer.sync.component.TreePeer
 
 # Echo3 Extras Property Component Synchronize Peers (From Application Framework)
