--- a/src/webcontainer/java/META-INF/nextapp/echo/SynchronizePeerBindings.properties
+++ b/src/webcontainer/java/META-INF/nextapp/echo/SynchronizePeerBindings.properties
@@ -1,25 +1,26 @@
 # Echo3 Extras Component Synchronize Peers
-nextapp.echo.extras.app.AccordionPane						nextapp.echo.extras.webcontainer.sync.component.AccordionPanePeer
-nextapp.echo.extras.app.BorderPane              			nextapp.echo.extras.webcontainer.sync.component.BorderPanePeer
-nextapp.echo.extras.app.ColorSelect              			nextapp.echo.extras.webcontainer.sync.component.ColorSelectPeer
-nextapp.echo.extras.app.ContextMenu							nextapp.echo.extras.webcontainer.sync.component.ContextMenuPeer
-nextapp.echo.extras.app.DropDownMenu						nextapp.echo.extras.webcontainer.sync.component.DropDownMenuPeer
-nextapp.echo.extras.app.Group								nextapp.echo.extras.webcontainer.sync.component.GroupPeer
-nextapp.echo.extras.app.MenuBarPane							nextapp.echo.extras.webcontainer.sync.component.MenuBarPanePeer
-nextapp.echo.extras.app.RichTextArea						nextapp.echo.extras.webcontainer.sync.component.RichTextAreaPeer
-nextapp.echo.extras.app.TabPane								nextapp.echo.extras.webcontainer.sync.component.TabPanePeer
-nextapp.echo.extras.app.ToolTipContainer					nextapp.echo.extras.webcontainer.sync.component.ToolTipContainerPeer
+nextapp.echo.extras.app.AccordionPane                       nextapp.echo.extras.webcontainer.sync.component.AccordionPanePeer
+nextapp.echo.extras.app.BorderPane                          nextapp.echo.extras.webcontainer.sync.component.BorderPanePeer
+nextapp.echo.extras.app.CalendarSelect                      nextapp.echo.extras.webcontainer.sync.component.CalendarSelectPeer
+nextapp.echo.extras.app.ColorSelect                         nextapp.echo.extras.webcontainer.sync.component.ColorSelectPeer
+nextapp.echo.extras.app.ContextMenu                         nextapp.echo.extras.webcontainer.sync.component.ContextMenuPeer
+nextapp.echo.extras.app.DropDownMenu                        nextapp.echo.extras.webcontainer.sync.component.DropDownMenuPeer
+nextapp.echo.extras.app.Group                               nextapp.echo.extras.webcontainer.sync.component.GroupPeer
+nextapp.echo.extras.app.MenuBarPane                         nextapp.echo.extras.webcontainer.sync.component.MenuBarPanePeer
+nextapp.echo.extras.app.RichTextArea                        nextapp.echo.extras.webcontainer.sync.component.RichTextAreaPeer
+nextapp.echo.extras.app.TabPane                             nextapp.echo.extras.webcontainer.sync.component.TabPanePeer
+nextapp.echo.extras.app.ToolTipContainer                    nextapp.echo.extras.webcontainer.sync.component.ToolTipContainerPeer
 nextapp.echo.extras.app.TransitionPane                      nextapp.echo.extras.webcontainer.sync.component.TransitionPanePeer
 nextapp.echo.extras.app.Tree                                nextapp.echo.extras.webcontainer.sync.component.TreePeer
 
 # Echo3 Extras Property Component Synchronize Peers (From Application Framework)
-nextapp.echo.extras.app.IconSet		                        nextapp.echo.extras.app.serial.property.IconSetPeer
-nextapp.echo.extras.app.menu.ItemModel          			nextapp.echo.extras.app.serial.property.ItemModelPeer
+nextapp.echo.extras.app.IconSet                             nextapp.echo.extras.app.serial.property.IconSetPeer
+nextapp.echo.extras.app.menu.ItemModel                      nextapp.echo.extras.app.serial.property.ItemModelPeer
 nextapp.echo.extras.webcontainer.sync.component.AbstractMenuPeer$RenderedMenuStateModel \
         nextapp.echo.extras.webcontainer.sync.component.AbstractMenuPeer$RenderedMenuStateModelPropertyPeer
 
-nextapp.echo.extras.app.layout.AccordionPaneLayoutData		nextapp.echo.extras.app.serial.property.AccordionPaneLayoutDataPeer
-nextapp.echo.extras.app.layout.TabPaneLayoutData			nextapp.echo.extras.app.serial.property.TabPaneLayoutDataPeer
+nextapp.echo.extras.app.layout.AccordionPaneLayoutData      nextapp.echo.extras.app.serial.property.AccordionPaneLayoutDataPeer
+nextapp.echo.extras.app.layout.TabPaneLayoutData            nextapp.echo.extras.app.serial.property.TabPaneLayoutDataPeer
 nextapp.echo.extras.webcontainer.sync.component.TreePeer$TreeStructure \
                                              nextapp.echo.extras.webcontainer.sync.component.TreePeer$TreeStructurePeer
 nextapp.echo.extras.webcontainer.sync.component.TreePeer$TreeSelectionUpdate \
