Updated build files: dist, doc, dist.testapp building post-restructuring.

--- a/ant.properties
+++ b/ant.properties
@@ -1,52 +1,60 @@
-servlet.lib.jar                   ${env.SERVLET_LIB_JAR}
-echo3.app.lib.jar                 ${env.ECHO3_LIB_HOME}/Echo3_App.jar
-echo3.webcontainer.lib.jar        ${env.ECHO3_LIB_HOME}/Echo3_WebContainer.jar
+servlet.lib.jar                         ${env.SERVLET_LIB_JAR}
+servlet.lib.msg                         The environment variable SERVLET_LIB_JAR must contain the path to the Servlet 2.4 \
+                                        specification JAR file (servlet.jar or servlet-api.jar).
 
-debug                             yes
-jarfile.extras.app                Echo3_Extras_App.jar
-jarfile.extras.webcontainer       Echo3_Extras_WebContainer.jar
-warfile.testapp                   ExtrasTest.war
-zipfile.release                   NextApp_Echo3_Extras.zip
-tarfile.release                   NextApp_Echo3_Extras.tar
-tgzfile.release                   NextApp_Echo3_Extras.tgz
+echo3.app.lib.jar                       ${env.ECHO3_LIB_HOME}/Echo3_App.jar
+echo3.webcontainer.lib.jar              ${env.ECHO3_LIB_HOME}/Echo3_WebContainer.jar
 
-dir.temp                          tmp
+debug                                   yes
+jarfile.extras.app                      Echo3_Extras_App.jar
+jarfile.extras.webcontainer             Echo3_Extras_WebContainer.jar
+warfile.testapp                         ExtrasTest.war
+zipfile.release                         NextApp_Echo3_Extras.zip
+tarfile.release                         NextApp_Echo3_Extras.tar
+tgzfile.release                         NextApp_Echo3_Extras.tgz
 
-dir.src                           src
-dir.src.app                       ${dir.src}/app/java
-dir.src.webcontainer              ${dir.src}/webcontainer/java
+dir.temp                                tmp
 
-dir.resource                      resource
+dir.src                                 src
+dir.src.client                          ${dir.src}/client
+dir.src.client.extras                   ${dir.src.client}/extras
 
-dir.javadoc                       javadoc
-dir.javadoc.public                ${dir.javadoc}/public
-dir.javadoc.private               ${dir.javadoc}/private
-dir.javadoc.app.public            ${dir.javadoc.public}/app
-dir.javadoc.webcontainer.public   ${dir.javadoc.public}/webcontainer
-dir.javadoc.app.private           ${dir.javadoc.private}/app
-dir.javadoc.webcontainer.private  ${dir.javadoc.private}/webcontainer
+dir.src.server-java                     ${dir.src}/server-java
+dir.src.server-java.app                 ${dir.src.server-java}/app
+dir.src.server-java.webcontainer        ${dir.src.server-java}/webcontainer
+dir.src.server-java.webcontainer.js     ${dir.src.server-java.webcontainer}/nextapp/echo/extras/webcontainer/resource/js
+dir.src.server-java.test-ia.lib         ${dir.src.server-java}/testapp-interactive/lib
+dir.src.server-java.test-ia.htdocs      ${dir.src.server-java}/testapp-interactive/htdocs
+dir.src.server-java.test-ia.deploy      ${dir.src.server-java}/testapp-interactive/deploy
 
-dir.src.testapp                   ${dir.src}/testapp/java
-dir.htdocs.testapp                ${dir.src}/testapp/htdocs
-dir.deploy.testapp                ${dir.src}/testapp/deploy
+dir.resource                            resource
 
-dir.build                         build
-dir.build.app                     ${dir.build}/app
-dir.build.webcontainer            ${dir.build}/webcontainer
-dir.build.testapp                 ${dir.build}/testapp
-dir.build.release                 ${dir.build}/release
-dir.build.release.root            ${dir.build.release}/NextApp_Echo3_Extras
+dir.javadoc                             javadoc
+dir.javadoc.public                      ${dir.javadoc}/public
+dir.javadoc.private                     ${dir.javadoc}/private
+dir.javadoc.app.public                  ${dir.javadoc.public}/app
+dir.javadoc.webcontainer.public         ${dir.javadoc.public}/webcontainer
+dir.javadoc.app.private                 ${dir.javadoc.private}/app
+dir.javadoc.webcontainer.private        ${dir.javadoc.private}/webcontainer
 
-dir.dist                          dist
-dir.dist.lib                      ${dir.dist}/lib
-dir.dist.testapp                  ${dir.dist}/testapp
+dir.build                               build
+dir.build.server-java                   ${dir.build}/server-java
+dir.build.server-java.app               ${dir.build.server-java}/app
+dir.build.server-java.webcontainer      ${dir.build.server-java}/webcontainer
+dir.build.server-java.webcontainer.js   ${dir.build.server-java.webcontainer}/nextapp/echo/extras/webcontainer/resource/js
+dir.build.server-java.testapp           ${dir.build.server-java}/testapp
+dir.build.server-java.release           ${dir.build.server-java}/release
+dir.build.server-java.release.root      ${dir.build.server-java.release}/NextApp_Echo3_Extras
 
-dir.release                       release
+dir.dist                                dist
+dir.dist.lib                            ${dir.dist}/lib
+dir.dist.testapp                        ${dir.dist}/testapp
 
-javadoc.version                   v0.3
-javadoc.windowtitle               NextApp . Echo3 Extras . API Specification
-javadoc.doctitle.app              Echo3 Extras <br>API Specification
-javadoc.doctitle.webcontainer     Echo3 Extras Container<br>API Specification
-javadoc.header                    <b>NextApp Echo3 Extras<br>${javadoc.version}</b>
-javadoc.cssfile                   ${dir.resource}/javadoc.css
+dir.release                             release
 
+javadoc.version                         v3.0.alpha1
+javadoc.windowtitle                     NextApp . Echo3 Extras . API Specification
+javadoc.doctitle.app                    Echo3 Extras <br>API Specification
+javadoc.doctitle.webcontainer           Echo3 Extras Container<br>API Specification
+javadoc.header                          <b>NextApp Echo3 Extras<br>${javadoc.version}</b>
+javadoc.cssfile                         ${dir.resource}/javadoc.css
