All JS resources no longer in js/ path. Moved richtext resources over to client source directory.

--- a/build.xml
+++ b/build.xml
@@ -113,7 +113,7 @@
                 <patternset refid="fileset.resources"/>
             </fileset>
         </copy>
-        <copy todir="${dir.build.server-java.webcontainer.js}">
+        <copy todir="${dir.build.server-java.webcontainer.res}">
             <fileset dir="${dir.src.client.extras}">
                 <patternset refid="fileset.resources"/>
             </fileset>
