--- a/ant.properties
+++ b/ant.properties
@@ -22,7 +22,7 @@ dir.src.client.extras                   ${dir.src.client}/extras
 dir.src.server-java                     ${dir.src}/server-java
 dir.src.server-java.app                 ${dir.src.server-java}/app
 dir.src.server-java.webcontainer        ${dir.src.server-java}/webcontainer
-dir.src.server-java.webcontainer.js     ${dir.src.server-java.webcontainer}/nextapp/echo/extras/webcontainer/resource/js
+dir.src.server-java.webcontainer.res    ${dir.src.server-java.webcontainer}/nextapp/echo/extras/webcontainer/resource
 dir.src.server-java.test-ia.lib         ${dir.src.server-java}/testapp-interactive/lib
 dir.src.server-java.test-ia.htdocs      ${dir.src.server-java}/testapp-interactive/htdocs
 dir.src.server-java.test-ia.deploy      ${dir.src.server-java}/testapp-interactive/deploy
@@ -41,7 +41,7 @@ dir.build                               build
 dir.build.server-java                   ${dir.build}/server-java
 dir.build.server-java.app               ${dir.build.server-java}/app
 dir.build.server-java.webcontainer      ${dir.build.server-java}/webcontainer
-dir.build.server-java.webcontainer.js   ${dir.build.server-java.webcontainer}/nextapp/echo/extras/webcontainer/resource/js
+dir.build.server-java.webcontainer.res  ${dir.build.server-java.webcontainer}/nextapp/echo/extras/webcontainer/resource
 dir.build.server-java.testapp           ${dir.build.server-java}/testapp
 dir.build.server-java.release           ${dir.build.server-java}/release
 dir.build.server-java.release.root      ${dir.build.server-java.release}/NextApp_Echo3_Extras
