--- a/ant.properties
+++ b/ant.properties
@@ -52,7 +52,7 @@ dir.dist.testapp                        ${dir.dist}/testapp
 
 dir.release                             release
 
-javadoc.version                         v3.0.alpha1
+javadoc.version                         v3.0.b0
 javadoc.windowtitle                     NextApp . Echo3 Extras . API Specification
 javadoc.doctitle.app                    Echo3 Extras <br>API Specification
 javadoc.doctitle.webcontainer           Echo3 Extras Container<br>API Specification
