--- a/ant.properties
+++ b/ant.properties
@@ -1,3 +1,5 @@
+release.version                         3.0.b0
+
 servlet.lib.jar                         ${env.SERVLET_LIB_JAR}
 servlet.lib.msg                         The environment variable SERVLET_LIB_JAR must contain the path to the Servlet 2.4 \
                                         specification JAR file (servlet.jar or servlet-api.jar).
@@ -9,9 +11,10 @@ debug                                   yes
 jarfile.extras.app                      Echo3_Extras_App.jar
 jarfile.extras.webcontainer             Echo3_Extras_WebContainer.jar
 warfile.testapp                         ExtrasTest.war
-zipfile.release                         NextApp_Echo3_Extras.zip
-tarfile.release                         NextApp_Echo3_Extras.tar
-tgzfile.release                         NextApp_Echo3_Extras.tgz
+fileprefix.release                      NextApp_Echo_Extras
+zipfile.release                         ${fileprefix.release}.${release.version}.zip
+tarfile.release                         ${fileprefix.release}.${release.version}.tar
+tgzfile.release                         ${fileprefix.release}.${release.version}.tgz
 
 dir.temp                                tmp
 
@@ -52,7 +55,7 @@ dir.dist.testapp                        ${dir.dist}/testapp
 
 dir.release                             release
 
-javadoc.version                         v3.0.b0
+javadoc.version                         v${release.version}
 javadoc.windowtitle                     NextApp . Echo3 Extras . API Specification
 javadoc.doctitle.app                    Echo3 Extras <br>API Specification
 javadoc.doctitle.webcontainer           Echo3 Extras Container<br>API Specification
